--- a/src/resume/templates/index.html
+++ b/src/resume/templates/index.html
@@ -152,7 +152,7 @@
                             <div class="testimonial-credits">
                               <!-- Picture -->
                               <div class="testimonial-picture">
-                                <img src="{{item.picture.url}}" alt="Gary Johnson"/>
+                                <img src="{{item.picture.url}}" alt="client testimonial"/>
                               </div>              
                               <!-- /Picture -->
                               <!-- Testimonial author information -->
