fixed the header title in the mobile view

--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -72,7 +72,7 @@
                 <img src="{% static 'images/mo-logo-white.png' %}" alt="image">
             </a>
           </div>
-          <div class="mobile-site-title"><a href="#">Alex Smith</a></div>
+          <div class="mobile-site-title"><a href="/">Mo Salam</a></div>
         </div>
 
         <a class="menu-toggle mobile-visible">
