updated the main app resume and finished the main page, left is creating the blog functionality and send mail function for the contact us form

--- a/src/blog/templates/blog_detail.html
+++ b/src/blog/templates/blog_detail.html
@@ -17,11 +17,11 @@
             <div class="img-foverlay img-color-overlay">
                 <div class="container">
                     <div class="row section-separator">
-                        <div class="mh-page-title text-center col-sm-12">
-                            <h2>Blog</h2>
-                            <p>It is a long established fact that a reader will be <br>
-                            distracted by the readable content of a page when looking at its layout.</p>
-                        </div>
+{#                        <div class="mh-page-title text-center col-sm-12">#}
+{#                            <h2>Blog</h2>#}
+{#                            <p>It is a long established fact that a reader will be <br>#}
+{#                            distracted by the readable content of a page when looking at its layout.</p>#}
+{#                        </div>#}
                     </div>
                 </div>
             </div>
@@ -36,92 +36,26 @@
                                 <div class="mh-blog-item dark-bg blog-single">
                                     <img src="assets/images/home-bg-img.jpg" alt="" class="img-fluid">
                                     <div class="blog-inner">
-                                        <h2><a href="">A life without the daily traffic jams</a></h2>
+                                        <h2><a href="">{{post.title}}</a></h2>
                                         <div class="mh-blog-post-info">
                                             <ul>
-                                                <li><strong>Post On</strong><a href="">24.11.19</a></li>
-                                                <li><strong>By</strong><a href="">ThemeSpiders</a></li>
+                                                <li><strong>Post On</strong><a href="">{{post.created_on.date}}</a></li>
+                                                <li><strong>By</strong><a href="">{{post.creator}}</a></li>
                                             </ul>
                                         </div>
-                                        <p>
-                                           Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                                           sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-                                           magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
-                                           quis nostrud exerci tation ullamcorper suscipit lobortis nisl
-                                           ut aliquip ex ea commodo consequat. Duis autem vel eum iriure
-                                           dolor in hendrerit in vulputate velit esse molestie consequat,
-                                           vel illum dolore eu feugiat nulla facilisis at vero eros et
-                                           accumsan et iusto odio dignissim qui blandit praesent luptatum
-                                           zzril delenit augue duis dolore te feugait nulla facilisi.
-                                        </p>
-                                        <p>
-                                           Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                                           sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-                                           magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
-                                           quis nostrud exerci tation ullamcorper suscipit lobortis nisl
-                                           ut aliquip ex ea commodo consequat. Duis autem vel eum iriure.
-                                        </p>
-
-                                        <img src="assets/images/home-bg-img.jpg" alt="" class="img-fluid">
-
-                                        <p>
-                                           Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                                           sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-                                           magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
-                                           quis nostrud exerci tation ullamcorper suscipit lobortis nisl
-                                           ut aliquip ex ea commodo consequat. Duis autem vel eum iriure
-                                           dolor in hendrerit in vulputate velit esse molestie consequat,
-                                           vel illum dolore eu feugiat nulla facilisis at vero eros et
-                                           accumsan et iusto odio dignissim qui blandit praesent .
-                                        </p>
-
-                                        <ul>
-                                            <li>Lorem ipsum dolor sit amet</li>
-                                            <li>Lorem ipsum dolor sit amet</li>
-                                            <li>Lorem ipsum dolor sit amet</li>
-                                            <li>Lorem ipsum dolor sit amet</li>
-                                        </ul>
-
-                                        <q>
-                                             Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                                           sed diam nonummy nibh euismod tincidunt ut laoreet dolore.
-                                           Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                                           sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-                                        </q>
-
-                                        <p>
-                                           Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                                           sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-                                           magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
-                                           quis nostrud exerci tation ullamcorper suscipit lobortis nisl
-                                           ut aliquip ex ea commodo consequat. Duis autem vel eum iriure
-                                           dolor in hendrerit in vulputate velit esse molestie consequat,
-                                           vel illum dolore eu feugiat nulla facilisis at vero eros et
-                                           accumsan et iusto odio dignissim qui blandit praesent .
-                                        </p>
-
-                                        <h3>Lorem Ipsum Dolor</h3>
-
-                                        <p>
-                                           Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                                           sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-                                           magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
-                                           quis nostrud exerci tation ullamcorper suscipit lobortis nisl
-                                           ut aliquip ex ea commodo consequat. Duis autem vel eum iriure
-                                           dolor in hendrerit in vulputate velit esse molestie consequat,
-                                           vel illum dolore eu feugiat nulla facilisis at vero eros et
-                                           accumsan et iusto odio dignissim qui blandit praesent .
-                                        </p>
+                                        {% autoescape off %}
+                                        <p> {{ post.body }}</p>
+                                        {% endautoescape %}
                                     </div>
                                 </div>
                             </div>
                             <div class="col-sm-12 ">
                                 <div class="row mh-related-post">
                                     <div class="mh-blog-next-prev-post col-md-6 text-left">
-                                        <a href=""><i class="fa fa-angle-left"></i> Lorem Ipsum Dolor</a>
+                                        <a href=""><i class="fa fa-angle-left"></i> Back</a>
                                     </div>
                                     <div class="mh-blog-next-prev-post col-md-6 text-right">
-                                        <a href="">Lorem Ipsum Dolor <i class="fa fa-angle-right"></i></a>
+                                        <a href="">Next <i class="fa fa-angle-right"></i></a>
                                     </div>
                                 </div>
                             </div>
