--- a/src/resume/templates/index.html
+++ b/src/resume/templates/index.html
@@ -246,26 +246,14 @@
                                 <h3 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">Education</h3>
                                 <div class="mh-education-deatils">
                                     <!-- Education Institutes-->
+                                    {% for item in education %}
                                     <div class="mh-education-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
-                                        <h4>Art & Multimedia From <a href="">Oxford University</a></h4>
-                                        <div class="mh-eduyear">2005-2008</div>
-                                        <p>It is a long established fact that a reader will be distracted by the readable content of a
-                                        page when looking at its layout. The point of using  Lorem Ipsum </p>
+                                        <h4>{{item.subject}} <a href="">{{item.university}}</a></h4>
+                                        <div class="mh-eduyear">{{item.year}}</div>
+                                        <p>{{item.overview}} </p>
                                     </div>
-                                    <!-- Education Institutes-->
-                                    <div class="mh-education-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">
-                                        <h4>Art & Multimedia From <a href="">Oxford University</a></h4>
-                                        <div class="mh-eduyear">2005-2008</div>
-                                        <p>It is a long established fact that a reader will be distracted by the readable content of a
-                                        page when looking at its layout. The point of using  Lorem Ipsum </p>
-                                    </div>
-                                    <!-- Education Institutes-->
-                                    <div class="mh-education-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">
-                                        <h4>Art & Multimedia From <a href="">Oxford University</a></h4>
-                                        <div class="mh-eduyear">2005-2008</div>
-                                        <p>It is a long established fact that a reader will be distracted by the readable content of a
-                                        page when looking at its layout. The point of using L orem Ipsum </p>
-                                    </div>
+                                    {% endfor %}
+
                                 </div>
                             </div>
                         </div>
@@ -274,35 +262,18 @@
                                  <h3>Work Experience</h3>
                                 <div class="mh-experience-deatils">
                                     <!-- Education Institutes-->
+                                    {% for item in experience %}
                                     <div class="mh-work-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">
-                                        <h4>UI/UX Designer <a href="">IronSketch</a></h4>
-                                        <div class="mh-eduyear">2005-2008</div>
+                                        <h4>{{item.job}} <a href="">{{item.company}}</a></h4>
+                                        <div class="mh-eduyear">{{item.period}}</div>
                                         <span>Responsibility :</span>
-                                        <ul class="work-responsibility">
-                                            <li><i class="fa fa-circle"></i>Validate CSS</li>
-                                            <li><i class="fa fa-circle"></i>Project Management</li>
-                                        </ul>
+                                        <p>{{ item.overview }}</p>
+{#                                        <ul class="work-responsibility">#}
+{#                                            <li><i class="fa fa-circle"></i>Validate CSS</li>#}
+{#                                            <li><i class="fa fa-circle"></i>Project Management</li>#}
+{#                                        </ul>#}
                                     </div>
-                                    <!-- Education Institutes-->
-                                    <div class="mh-work-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">
-                                        <h4>Art & Multimedia From <a href="">Oxford University</a></h4>
-                                        <div class="mh-eduyear">2005-2008</div>
-                                        <span>Responsibility :</span>
-                                        <ul class="work-responsibility">
-                                            <li><i class="fa fa-circle"></i>Validate CSS</li>
-                                            <li><i class="fa fa-circle"></i>Project Management</li>
-                                        </ul>
-                                    </div>
-                                    <!-- Education Institutes-->
-                                    <div class="mh-work-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">
-                                        <h4>Art & Multimedia From <a href="">Oxford University</a></h4>
-                                        <div class="mh-eduyear">2005-2008</div>
-                                        <span>Responsibility :</span>
-                                        <ul class="work-responsibility">
-                                            <li><i class="fa fa-circle"></i>Validate CSS</li>
-                                            <li><i class="fa fa-circle"></i>Project Management</li>
-                                        </ul>
-                                    </div>
+                                    {% endfor %}
                                 </div>
                             </div>
                         </div>
@@ -328,10 +299,13 @@
                         <div class="portfolio-nav col-sm-12" id="filter-button">
                             <ul>
                                 <li data-filter="*" class="current wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s"> <span>All Categories</span></li>
-                                <li data-filter=".Java" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s"><span>Java</span></li>
-                                <li data-filter=".Python" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s"><span>Python</span></li>
-                                <li data-filter=".Django" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s"><span>Django</span></li>
-                                <li data-filter=".Wordpress" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s"><span>Wordpress</span></li>
+
+                               {% for project in project %} {% for tech in project.technology.all %}
+                                <li data-filter=".{{tech.name}}" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s"><span>{{tech.name}}</span></li>
+                                {% endfor %} {% endfor %}
+{#                                <li data-filter=".Python" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s"><span>Python</span></li>#}
+{#                                <li data-filter=".Django" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s"><span>Django</span></li>#}
+{#                                <li data-filter=".Wordpress" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s"><span>Wordpress</span></li>#}
                             </ul>
                         </div>
                         <div class="mh-project-gallery col-sm-12 wow fadeInUp" id="project-gallery" data-wow-duration="0.8s" data-wow-delay="0.5s">
@@ -418,54 +392,24 @@
                         <div class="col-sm-12 section-title wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
                             <h3>Featured Posts</h3>
                         </div>
+                        {% for post in featured_blog %}
                         <div class="col-sm-12 col-md-4">
                              <div class="mh-blog-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
-                                <img src="{% static 'assets/images/b-3.png' %}" alt="" class="img-fluid">
+                                <img src="{{post.thumbnail.url}}" alt="" class="img-fluid">
                                 <div class="blog-inner">
-                                    <h2><a href="../blog/templates/blog-single.html">A life without the daily traffic jams</a></h2>
+                                    <h2><a href="{{post.get_absolute_url}}">{{post.title}}</a></h2>
                                     <div class="mh-blog-post-info">
                                         <ul>
-                                            <li><strong>Post On</strong><a href="">24.11.19</a></li>
-                                            <li><strong>By</strong><a href="">ThemeSpiders</a></li>
+                                            <li><strong>Post On</strong><a href="">{{post.created_on.date}}</a></li>
+                                            <li><strong>By</strong><a href="">{{post.creator}}</a></li>
                                         </ul>
                                     </div>
-                                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout</p>
-                                    <a href="../blog/templates/blog-single.html">Read More</a>
+                                    <p>{{ post.body | slice:":400" }}/p>
+                                    <a href="{{post.get_absolute_url}}">Read More</a>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-12 col-md-4">
-                            <div class="mh-blog-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">
-                                <img src="{% static 'assets/images/b-2.png' %}" alt="" class="img-fluid">
-                                <div class="blog-inner">
-                                    <h2><a href="../blog/templates/blog-single.html">Proportion are what’s really needed</a></h2>
-                                    <div class="mh-blog-post-info">
-                                        <ul>
-                                            <li><strong>Post On</strong><a href="">24.11.19</a></li>
-                                            <li><strong>By</strong><a href="">ThemeSpiders</a></li>
-                                        </ul>
-                                    </div>
-                                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout</p>
-                                    <a href="../blog/templates/blog-single.html">Read More</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-12 col-md-4">
-                            <div class="mh-blog-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">
-                                <img src="{% static 'assets/images/b-1.png' %}" alt="" class="img-fluid">
-                                <div class="blog-inner">
-                                    <h2><a href="../blog/templates/blog-single.html">Mounts of paper work to remember the way</a></h2>
-                                    <div class="mh-blog-post-info">
-                                        <ul>
-                                            <li><strong>Post On</strong><a href="">24.11.19</a></li>
-                                            <li><strong>By</strong><a href="">ThemeSpiders</a></li>
-                                        </ul>
-                                    </div>
-                                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout</p>
-                                    <a href="../blog/templates/blog-single.html">Read More</a>
-                                </div>
-                            </div>
-                        </div>
+                        {% endfor %}
                     </div>
                 </div>
             </div>
@@ -558,7 +502,7 @@
         ===================
         -->
         <footer class="mh-footer mh-footer-3">
-            <div class="container-fluid">
+            <div class="container-fluid" id="mh-contact">
                 <div class="row section-separator">
                     <div class="col-sm-12 section-title wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
                         <h3>Contact Me</h3>
@@ -575,8 +519,8 @@
                                             <div class="each-info media-body">
                                                 <h4>Address</h4>
                                                 <address>
-                                                    5th Avenue, 34th floor, <br>
-                                                     New york
+                                                    Kuala Lumpur, <br>
+                                                     Malaysia
                                                 </address>
                                             </div>
                                         </div>
@@ -588,8 +532,7 @@
                                             </div>
                                             <div class="each-info media-body">
                                                 <h4>Email</h4>
-                                                <a href="mailto:yourmail@email.com">yourmail@email.com</a><br>
-                                                <a href="mailto:yourmail@email.com">yourmail@email.com</a>
+                                                <a href="mailto:mo@mosalam.me">mo@mosalam.me</a>
                                             </div>
                                         </div>
                                     </div>
@@ -600,8 +543,7 @@
                                             </div>
                                             <div class="each-info media-body">
                                                 <h4>Phone</h4>
-                                                <a href="callto:(880)-8976-987">(880)-8976-987</a><br>
-                                                <a href="callto:(880)-8976-987">(880)-8976-987</a>
+                                                <a href="callto:(+60)-17-345-8113">(+60)-17-345-8113</a>
                                             </div>
                                         </div>
                                     </div>
@@ -643,10 +585,9 @@
                                         </div>
                                         <div class="col-sm-6">
                                             <ul class="social-icon">
-                                                <li><a href=""><i class="fa fa-facebook"></i></a></li>
-                                                <li><a href=""><i class="fa fa-twitter"></i></a></li>
-                                                <li><a href=""><i class="fa fa-github"></i></a></li>
-                                                <li><a href=""><i class="fa fa-dribbble"></i></a></li>
+                                                <li><a href="https://www.linkedin.com/in/m7salam/"><i class="fa fa-linkedin"></i></a></li>
+                                                <li><a href="https://twitter.com/m7salam"><i class="fa fa-twitter"></i></a></li>
+                                                <li><a href="https://github.com/m7salam"><i class="fa fa-github"></i></a></li>
                                             </ul>
                                         </div>
                                     </div>
