--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -35,11 +35,11 @@
         <link rel="stylesheet" href="{% static 'assets/css/responsive.css' %}">
 
         <!-- Colors -->
-        <link rel="stylesheet" href="{% static 'assets/css/colors/defauld.css' %}" title="defauld">
+{#        <link rel="stylesheet" href="{% static 'assets/css/colors/defauld.css' %}" title="defauld">#}
         <!-- <link rel="alternate stylesheet" href="{% static 'assets/css/colors/blue.css' %}" title="blue"> -->
         <!-- <link rel="alternate stylesheet" href="{% static 'assets/css/colors/green.css' %}" title="green"> -->
         <!-- <link rel="alternate stylesheet" href="{% static 'assets/css/colors/blue-munsell.css' %}" title="blue-munsell"> -->
-        <!-- <link rel="alternate stylesheet" href="{% static 'assets/css/colors/orange.css' %}" title="orange"> -->
+        <link rel="stylesheet" href="{% static 'assets/css/colors/orange.css' %}" title="orange">
         <!-- <link rel="alternate stylesheet" href="{% static 'assets/css/colors/purple.css' %}" title="purple">  -->
         <!-- <link rel="alternate stylesheet" href="{% static 'assets/css/colors/slate.css' %}" title="slate"> -->
         <!-- <link rel="alternate stylesheet" href="{% static 'assets/css/colors/yellow.css' %}" title="yellow"> -->
