updated the settings files and used the .env configurations and deleted the blog section from the homepage

--- a/src/resume/templates/index.html
+++ b/src/resume/templates/index.html
@@ -385,7 +385,7 @@
            BLOG
         ===================
         -->
-        <section class="mh-blog image-bg featured-img-two" id="mh-blog">
+<!--         <section class="mh-blog image-bg featured-img-two" id="mh-blog">
             <div class="img-color-overlay">
                 <div class="container">
                     <div class="row section-separator">
@@ -411,9 +411,11 @@
                         </div>
                         {% endfor %}
                     </div>
+                <a class="btn btn-outline-warning btn-block" href="{% url 'blog:blog_index' %}" role="button">View All</a>
+
                 </div>
             </div>
-        </section>
+        </section>  -->
 
         <!--
         ===================
