--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -29,7 +29,7 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav mr-auto ml-auto">
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="#mh-home">Home</a>
+                                    <a class="nav-link" href="{% url 'index:index' %}">Home</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#mh-about">About</a>
@@ -42,9 +42,6 @@
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#mh-portfolio">Portfolio</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#mh-pricing">Pricing</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#mh-blog">Blog</a>
