edited the thumbnail url

--- a/src/resume/templates/index.html
+++ b/src/resume/templates/index.html
@@ -139,7 +139,11 @@
 
                                         <div class="col-sm-7">
                                             <div class="mh-featured-project-img shadow-2 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
-                                                <img src="{{project.thumbnail.url}}" alt="" class="img-fluid">
+                                                {% if project.thumbnail.url is None %}
+
+
+                                                <img src="#" alt="" class="img-fluid">
+                                                {% endif %}
                                             </div>
                                         </div>
                                         <div class="col-sm-5">
